--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -223,6 +223,7 @@
         android:layout_marginBottom="284dp"
         android:text="Units Per Second: "
         android:textColor="@color/black"
+        android:gravity="center"
         android:textSize="21sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -363,5 +364,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.897" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/Settings"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        android:alpha="1"
+        android:background="@drawable/settings"
+        android:elevation="50dp"
+        android:text="Settings"
+        android:textColor="#00000000"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
